# UAP-Pembelajaran-Mesin

./: .pdm-python  Pelatihan_dan_Evaluasi_Model_Klasifikasi_Makanan.ipynb  README.md  app.py  pyproject.toml  requirements.txt
