[project]
name = "UAP-ML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Fitrah", email = "nurfitrahwahyuni783@gmail.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "numpy>=2.2.6", "pandas>=2.3.3", "pillow>=12.0.0", "matplotlib>=3.10.8", "seaborn>=0.13.2", "plotly>=6.5.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
